js section added

--- a/index.html
+++ b/index.html
@@ -45,53 +45,81 @@
 
     <section class="grid grid-cols-1 lg:grid-cols-3 gap-5 container mx-auto">
       <div
-        id="SubhanAllahContaier"
+        id="SubhanAllah-Contaier"
         class="border-none rounded-lg shadow-md flex flex-col items-center"
       >
         <div class="card w-96 bg-white text-neutral-content">
           <div class="card-body items-center text-center">
             <h2 class="card-title text-black text-2xl">Subhan Allah</h2>
-            <p class="text-black py-5 font-roboto text-4xl">0</p>
+            <p
+              id="SubhanAllah-Display"
+              class="text-black py-5 font-roboto text-4xl"
+            >
+              0
+            </p>
             <div class="card-actions justify-end">
-              <button class="btn btn-success">Increase</button>
-              <button class="btn btn-error">Decrease</button>
+              <button id="btn-increase-SubhanAllah" class="btn btn-success">
+                Increase
+              </button>
+              <button id="btn-decrease-SubhanAllah" class="btn btn-error">
+                Decrease
+              </button>
             </div>
           </div>
         </div>
       </div>
       <div
-        id="AllahamdulillahContaier "
+        id="Alhamdulillah-Contaier "
         class="rounded-lg shadow-md flex flex-col items-center"
       >
         <div class="card w-96 bg-white text-neutral-content">
           <div class="card-body items-center text-center">
             <h2 class="card-title text-black text-2xl">Alhamdulillah</h2>
-            <p class="text-black py-5 font-roboto text-4xl">0</p>
+            <p
+              id="Alhamdulillah-Display"
+              class="text-black py-5 font-roboto text-4xl"
+            >
+              0
+            </p>
             <div class="card-actions justify-end">
-              <button class="btn btn-success">Increase</button>
-              <button class="btn btn-error">Decrease</button>
+              <button id="btn-increase-Alhamdulillah" class="btn btn-success">
+                Increase
+              </button>
+              <button id="btn-decrease-Alhamdulillah" class="btn btn-error">
+                Decrease
+              </button>
             </div>
           </div>
         </div>
       </div>
       <div
-        id="AllahuAkbarContaier"
+        id="AllahuAkber-Contaier"
         class="rounded-lg shadow-md flex flex-col items-center"
       >
         <div class="card w-96 bg-white text-neutral-content">
           <div class="card-body items-center text-center">
             <h2 class="card-title text-black text-2xl">Allahu Akber</h2>
-            <p class="text-black py-5 font-roboto text-4xl">0</p>
+            <p
+              id="AllahuAkber-Display"
+              class="text-black py-5 font-roboto text-4xl"
+            >
+              0
+            </p>
             <div class="card-actions justify-end">
-              <button class="btn btn-success">Increase</button>
-              <button class="btn btn-error">Decrease</button>
+              <button id="btn-increase-AllahuAkber" class="btn btn-success">
+                Increase
+              </button>
+              <button id="btn-decrease-AllahuAkber" class="btn btn-error">
+                Decrease
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <div class="py-10 flex justify-center">
-      <button class="btn btn-warning">Reset All Tasbih</button>
+      <button id="btn-reset" class="btn btn-warning">Reset All Tasbih</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
